--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -3,10 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import connect_four"
+    "import connect_four\n",
+    "import numpy as np"
    ]
   },
   {
@@ -22,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +33,13 @@
       "text/plain": [
        "array([[0, 0, 0, 0, 0, 0, 0],\n",
        "       [0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 2, 0, 0, 0],\n",
-       "       [0, 0, 2, 2, 0, 0, 0],\n",
-       "       [0, 2, 1, 1, 2, 1, 0],\n",
-       "       [1, 1, 2, 1, 1, 2, 0]])"
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 1, 1, 1, 0, 1]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,20 +50,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1 wins!\n"
+      "Player 2 wins!\n"
      ]
     }
    ],
    "source": [
-    "joc.drop(1,0)"
+    "joc.drop(2,1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "joc.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([2,1,1,1,1])\n",
+    "winning = np.array([1,1,1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "subs = [x[i:i+4] for i in range(len(x)-3)] #subarrays of len = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "player1win = np.array([1,1,1,1])\n",
+    "player2win = np.array([2,2,2,2])\n",
+    "# subarrays of len = 4\n",
+    "sub_arrays = [x[i:i+4] for i in range(len(x)-3)] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([2, 1, 1, 1]), array([1, 1, 1, 1])]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any([np.array_equal(player1win,sub) for sub in subs]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
